2005-08-18  Sven Panne  <sven.panne@aedion.de>
	* linux/src/al_mutexlib.h: Added missing "extern"s.

	* linux/configure.ac, linux/src/Makefile.in,
	linux/src/al_buffer.c, linux/src/al_main.c, linux/src/al_mixer.c:
	Use new thread library.

	* linux/src/al_threadlib.c, linux/src/al_threadlib.h: Added. This
	is a much cleaner and simpler merged version of the separate
	thread implementations.

	* linux/src/threads/Makefile.in,
	linux/src/threads/morphosthreads.c,
	linux/src/threads/morphosthreads.h,
	linux/src/threads/posixthreads.c,
	linux/src/threads/posixthreads.h, linux/src/threads/threadlib.h,
	linux/src/threads/windowsthreads.c,
	linux/src/threads/windowsthreads.h: Removed.

2005-08-17  Sven Panne  <sven.panne@aedion.de>
	* linux/src/al_main.c, linux/src/al_mixer.c,
	linux/src/threads/morphosthreads.c,
	linux/src/threads/morphosthreads.h,
	linux/src/threads/posixthreads.c,
	linux/src/threads/posixthreads.h, linux/src/threads/threadlib.h,
	linux/src/threads/windowsthreads.c,
	linux/src/threads/windowsthreads.h: Simplified thread lib.

	* linux/src/al_buffer.c, linux/src/al_ext.c, linux/src/al_mixer.c,
	linux/src/al_mutexlib.c, linux/src/al_mutexlib.h,
	linux/src/al_source.c, linux/src/al_spool.c,
	linux/src/alc/alc_context.c,
	linux/src/arch/windows/windows_native.c: Use an "_al" prefix for
	all globally visible symbols, which are internal to OpenAL.

	* linux/audioconvert/ac_adpcm.c, linux/audioconvert/ac_adpcm.h,
	linux/audioconvert/ac_bits.c, linux/audioconvert/ac_channels.c,
	linux/audioconvert/ac_endian.c, linux/audioconvert/ac_endian.h,
	linux/audioconvert/ac_format.c, linux/audioconvert/ac_freq.c,
	linux/audioconvert/ac_helper.c, linux/audioconvert/ac_misc.c,
	linux/audioconvert/ac_wave.h, linux/audioconvert/audioconvert.h,
	linux/audioconvert/test_ac.c, linux/include/AL/alext.h,
	linux/src/al_able.c, linux/src/al_able.h, linux/src/al_config.c,
	linux/src/al_config.h, linux/src/al_distance.h,